--- a/notebooks/02_numerical_pipeline_scaling.ipynb
+++ b/notebooks/02_numerical_pipeline_scaling.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f127b66c",
    "metadata": {},
    "source": [
     "# Preprocessing for numerical features\n",
@@ -22,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b9da71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +34,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7305540",
    "metadata": {},
    "source": [
     "We will now drop the target from the data we will use to train our\n",
@@ -41,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5af0431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e17c1d1c",
    "metadata": {},
    "source": [
     "Then, we select only the numerical columns, as seen in the previous\n",
@@ -60,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "031eafec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78cd5e16",
    "metadata": {},
    "source": [
     "Finally, we can divide our dataset into a train and test sets."
@@ -79,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cfd7ccea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +98,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d1f3712",
    "metadata": {},
    "source": [
     "## Model fitting with preprocessing\n",
@@ -105,6 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25c14ca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8946ab3b",
    "metadata": {},
    "source": [
     "We see that the dataset's features span across different ranges. Some\n",
@@ -151,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fbfbd62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4c24c7a",
    "metadata": {},
    "source": [
     "The `fit` method for transformers is similar to the `fit` method for\n",
@@ -189,6 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4be01bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a999a814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +221,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9a71c9f",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -218,6 +234,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c87dd79",
    "metadata": {},
    "source": [
     "Scaling the data is applied to each feature individually (i.e. each column in\n",
@@ -231,6 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1ffadd52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96ab50d1",
    "metadata": {},
    "source": [
     "Let's illustrate the internal mechanism of the `transform` method and put it\n",
@@ -256,6 +275,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c699de4",
    "metadata": {},
    "source": [
     "Finally, the method `fit_transform` is a shorthand method to call\n",
@@ -267,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f0f4b5bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f02960b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +309,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76348a16",
    "metadata": {},
    "source": [
     "Notice that the mean of all the columns is close to 0 and the standard deviation\n",
@@ -300,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df61ae84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +344,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f4371bd",
    "metadata": {},
    "source": [
     "We can easily combine sequential operations with a scikit-learn\n",
@@ -332,6 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d402e2f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,6 +371,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85c546e4",
    "metadata": {},
    "source": [
     "The `make_pipeline` function did not require us to give a name to each step.\n",
@@ -356,6 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "125cba18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,6 +392,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44d1d525",
    "metadata": {},
    "source": [
     "This predictive pipeline exposes the same methods as the final predictor:\n",
@@ -374,6 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6736bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,6 +414,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0942a476",
    "metadata": {},
    "source": [
     "We can represent the internal mechanism of a pipeline when calling `fit`\n",
@@ -404,6 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73b00d08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,6 +445,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97cded68",
    "metadata": {},
    "source": [
     "Let's show the underlying mechanism:\n",
@@ -434,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "38368b87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,6 +480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bed64ba7",
    "metadata": {},
    "source": [
     "We could compare this predictive model with the predictive model used in\n",
@@ -455,6 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8713fa03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,6 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "edd8743e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,6 +516,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9134d4d",
    "metadata": {},
    "source": [
     "We see that scaling the data before training the logistic regression was\n",
@@ -499,6 +537,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34c192e7",
    "metadata": {},
    "source": [
     "In this notebook we:\n",
@@ -513,8 +552,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
