--- a/notebooks/03_categorical_pipeline.ipynb
+++ b/notebooks/03_categorical_pipeline.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "31ff939e",
    "metadata": {},
    "source": [
     "# Encoding of categorical variables\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e10f5eb",
    "metadata": {},
    "source": [
     "Let's first load the entire adult dataset containing both numerical and\n",
@@ -22,6 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db3c0e32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c896cd6c",
    "metadata": {},
    "source": [
     "\n",
@@ -61,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7a29c6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +74,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03ecb436",
    "metadata": {},
    "source": [
     "How can we easily recognize categorical columns among the dataset? Part of\n",
@@ -78,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c3e0f53d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7c37783",
    "metadata": {},
    "source": [
     "If we look at the `\"native-country\"` column, we observe its data type is\n",
@@ -102,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4bcba70d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8619a0f7",
    "metadata": {},
    "source": [
     "Here, we created the selector by passing the data type to include; we then\n",
@@ -125,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f68a054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d374422c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,6 +155,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e583bd5",
    "metadata": {},
    "source": [
     "In the remainder of this section, we will present different strategies to\n",
@@ -152,6 +165,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1866bf63",
    "metadata": {},
    "source": [
     "## Strategies to encode categories\n",
@@ -167,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ad39607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +196,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "097ce668",
    "metadata": {},
    "source": [
     "We see that each category in `\"education\"` has been replaced by a numeric\n",
@@ -191,6 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42e1ba04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2b2cbf4",
    "metadata": {},
    "source": [
     "Now, we can check the encoding applied on all categorical features."
@@ -207,6 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7d3c8b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cda5e811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +246,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "734dd932",
    "metadata": {},
    "source": [
     "We see that the categories have been encoded for each feature (column)\n",
@@ -271,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7abbbfd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,6 +305,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0dd92f9b",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -298,6 +321,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3509f1d4",
    "metadata": {},
    "source": [
     "We see that encoding a single feature will give a NumPy array full of zeros\n",
@@ -308,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0888302b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +343,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85475794",
    "metadata": {},
    "source": [
     "As we can see, each category (unique value) became a column; the encoding\n",
@@ -329,6 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1505444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c3c7380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17a995b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,6 +388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14e5f1ed",
    "metadata": {},
    "source": [
     "Let's wrap this NumPy array in a dataframe with informative column names as\n",
@@ -368,6 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69322405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +408,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fac34f66",
    "metadata": {},
    "source": [
     "Look at how the `\"workclass\"` variable of the 3 first records has been\n",
@@ -389,6 +421,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "188098db",
    "metadata": {},
    "source": [
     "### Choosing an encoding strategy\n",
@@ -399,6 +432,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adf1ce10",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -411,6 +445,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "337b4cca",
    "metadata": {},
    "source": [
     "\n",
@@ -437,6 +472,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "040582c9",
    "metadata": {},
    "source": [
     "## Evaluate our predictive pipeline\n",
@@ -453,6 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "588ca26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,6 +498,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64451b0c",
    "metadata": {},
    "source": [
     "We see that the `Holand-Netherlands` category is occurring rarely. This will\n",
@@ -481,6 +519,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e47c09f",
    "metadata": {},
    "source": [
     "<div class=\"admonition tip alert alert-warning\">\n",
@@ -498,6 +537,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95adc654",
    "metadata": {},
    "source": [
     "We can now create our machine learning pipeline."
@@ -506,6 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "936f699a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,6 +560,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f33d869",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -533,6 +575,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec1be3b3",
    "metadata": {},
    "source": [
     "Finally, we can check the model's generalization performance only using the\n",
@@ -542,6 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03835b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,15 +597,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "080c9833",
    "metadata": {},
    "outputs": [],
    "source": [
     "scores = cv_results[\"test_score\"]\n",
-    "print(f\"The accuracy is: {scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "print(f\"The accuracy is: {scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "cba40f1d",
    "metadata": {},
    "source": [
     "As you can see, this representation of the categorical variables is\n",
@@ -571,6 +617,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "059e6a86",
    "metadata": {},
    "source": [
     "\n",
@@ -587,8 +634,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
