--- a/notebooks/03_categorical_pipeline_visualization.ipynb
+++ b/notebooks/03_categorical_pipeline_visualization.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "982e15b5",
    "metadata": {},
    "source": [
     "# Visualizing scikit-learn pipelines in Jupyter"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dcbcf4fa",
    "metadata": {},
    "source": [
     "The goal of keeping this notebook is to:\n",
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d61886a8",
    "metadata": {},
    "source": [
     "## First we load the dataset"
@@ -27,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c949ec4",
    "metadata": {},
    "source": [
     "We need to define our data and target. In this case we will build a classification model"
@@ -35,6 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7eb5fa62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3105be2",
    "metadata": {},
    "source": [
     "We inspect the first rows of the dataframe"
@@ -57,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88ee8da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +72,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7d347b1",
    "metadata": {},
    "source": [
     "For the sake of simplicity, we can cherry-pick some features and only retain\n",
@@ -74,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "479a51f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36dbc208",
    "metadata": {},
    "source": [
     "## Then we create the pipeline"
@@ -91,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee1560f1",
    "metadata": {},
    "source": [
     "The first step is to define the preprocessing steps"
@@ -99,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0558e7a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +128,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88e59de3",
    "metadata": {},
    "source": [
     "The next step is to apply the transformations using `ColumnTransformer`"
@@ -124,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13fd1b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3adf179f",
    "metadata": {},
    "source": [
     "Then we define the model and join the steps in order"
@@ -145,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29f15010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34d32ff4",
    "metadata": {},
    "source": [
     "Let's visualize it!"
@@ -166,6 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e9a663c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0a3a468",
    "metadata": {},
    "source": [
     "## Finally we score the model"
@@ -182,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22077a19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +210,12 @@
     "cv_results = cross_validate(model, data, target, cv=5)\n",
     "scores = cv_results[\"test_score\"]\n",
     "print(\"The mean cross-validation accuracy is: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ee4f67c2",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -219,8 +240,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
