--- a/notebooks/cross_validation_baseline.ipynb
+++ b/notebooks/cross_validation_baseline.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bf5a3825",
    "metadata": {},
    "source": [
     "# Comparing model performance with a simple baseline\n",
@@ -17,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "816f6c22",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -28,7 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "4076a58a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b2cbbf1",
    "metadata": {},
    "source": [
     "Across all evaluations, we will use a `ShuffleSplit` cross-validation\n",
@@ -48,7 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "f409c9bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73374451",
    "metadata": {},
    "source": [
     "We start by running the cross-validation for a simple decision tree regressor\n",
@@ -68,9 +74,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "a9c62675",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    30.000000\n",
+       "mean     45.746238\n",
+       "std       1.134675\n",
+       "min      43.329425\n",
+       "25%      44.947225\n",
+       "50%      45.851022\n",
+       "75%      46.629540\n",
+       "max      47.947523\n",
+       "Name: Decision tree regressor, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -89,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29d06ab8",
    "metadata": {},
    "source": [
     "Then, we evaluate our baseline. This baseline is called a dummy regressor.\n",
@@ -99,11 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "d57707bf",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    30.000000\n",
+       "mean     91.140009\n",
+       "std       0.821140\n",
+       "min      89.757566\n",
+       "25%      90.543652\n",
+       "50%      91.034555\n",
+       "75%      91.979007\n",
+       "max      92.477244\n",
+       "Name: Dummy regressor, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.dummy import DummyRegressor\n",
     "\n",
@@ -119,6 +166,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5091b82e",
    "metadata": {},
    "source": [
     "We now plot the cross-validation testing errors for the mean target baseline\n",
@@ -128,6 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e31ee09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d61e0af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +206,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fa372a15",
    "metadata": {},
    "source": [
     "We see that the generalization performance of our decision tree is far from\n",
@@ -181,8 +232,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
