--- a/notebooks/cross_validation_grouping.ipynb
+++ b/notebooks/cross_validation_grouping.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "64a162a1",
    "metadata": {},
    "source": [
     "# Sample grouping\n",
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f09c8b41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +26,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c7c8294",
    "metadata": {},
    "source": [
     "We will recreate the same model used in the previous notebook:\n",
@@ -33,6 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbf6e860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +49,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40431260",
    "metadata": {},
    "source": [
     "We will use the same baseline model. We will use a `KFold` cross-validation\n",
@@ -54,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d29c7c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +69,13 @@
     "test_score_no_shuffling = cross_val_score(model, data, target, cv=cv,\n",
     "                                          n_jobs=2)\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score_no_shuffling.mean():.3f} \u00b1 \"\n",
+    "      f\"{test_score_no_shuffling.mean():.3f} ± \"\n",
     "      f\"{test_score_no_shuffling.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e53d5fcf",
    "metadata": {},
    "source": [
     "Now, let's repeat the experiment by shuffling the data within the\n",
@@ -78,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "612238f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +93,13 @@
     "test_score_with_shuffling = cross_val_score(model, data, target, cv=cv,\n",
     "                                            n_jobs=2)\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score_with_shuffling.mean():.3f} \u00b1 \"\n",
+    "      f\"{test_score_with_shuffling.mean():.3f} ± \"\n",
     "      f\"{test_score_with_shuffling.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "07dd7f48",
    "metadata": {},
    "source": [
     "We observe that shuffling the data improves the mean accuracy.\n",
@@ -101,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cfd65717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +124,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a148b82",
    "metadata": {},
    "source": [
     "Let's plot the distribution now."
@@ -122,6 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5daf733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18ee80eb",
    "metadata": {},
    "source": [
     "The cross-validation testing error that uses the shuffling has less variance\n",
@@ -146,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "082b1db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +168,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e394881",
    "metadata": {},
    "source": [
     "Thus, there is an underlying structure in the data that shuffling will break\n",
@@ -164,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e9539c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +188,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f22c3ddc",
    "metadata": {},
    "source": [
     "If we read carefully, 13 writers wrote the digits of our dataset, accounting\n",
@@ -196,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "05115683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +222,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1193ffe4",
    "metadata": {},
    "source": [
     "\n",
@@ -222,6 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01b80fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +262,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00459def",
    "metadata": {},
    "source": [
     "We can check the grouping by plotting the indices linked to writer ids."
@@ -250,6 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c043a096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,6 +285,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7fa4577",
    "metadata": {},
    "source": [
     "Once we group the digits by writer, we can use cross-validation to take this\n",
@@ -272,6 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fb5b22be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,12 +305,13 @@
     "test_score = cross_val_score(model, data, target, groups=groups, cv=cv,\n",
     "                             n_jobs=2)\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score.mean():.3f} \u00b1 \"\n",
+    "      f\"{test_score.mean():.3f} ± \"\n",
     "      f\"{test_score.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7a1e979a",
    "metadata": {},
    "source": [
     "We see that this strategy is less optimistic regarding the model generalization\n",
@@ -298,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea494b02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33c15030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +350,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c924448d",
    "metadata": {},
    "source": [
     "As a conclusion, it is really important to take any sample grouping pattern\n",
@@ -336,8 +364,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
