--- a/notebooks/cross_validation_stratification.ipynb
+++ b/notebooks/cross_validation_stratification.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "05d9e082",
    "metadata": {},
    "source": [
     "\n",
@@ -20,6 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3fc4d913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a091acc4",
    "metadata": {},
    "source": [
     "At this point, we create a basic machine-learning model: a logistic\n",
@@ -40,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d836ee1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5796408",
    "metadata": {},
    "source": [
     "Once we created our model, we will use the cross-validation framework to\n",
@@ -63,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1ffc4fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09d41794",
    "metadata": {},
    "source": [
     "By defining three splits, we will use three samples for testing and six for\n",
@@ -93,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a1efb5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +110,12 @@
     "results = cross_validate(model, data, target, cv=cv)\n",
     "test_score = results[\"test_score\"]\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score.mean():.3f} \u00b1 {test_score.std():.3f}\")"
+    "      f\"{test_score.mean():.3f} ± {test_score.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a6bcce8b",
    "metadata": {},
    "source": [
     "It is a real surprise that our model cannot correctly classify any sample in\n",
@@ -117,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43b2af31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +141,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68e9a76c",
    "metadata": {},
    "source": [
     "We see that the target vector `target` is ordered. It will have some\n",
@@ -150,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1e0ae56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +181,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c450f873",
    "metadata": {},
    "source": [
     "To plot the information on a single figure, we will concatenate the\n",
@@ -178,6 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0df3097a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c9e72a49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67693bc1",
    "metadata": {},
    "source": [
     "Now we can represent graphically this information with bar plots."
@@ -209,6 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ac6fbf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cd3774b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c241d1e7",
    "metadata": {},
    "source": [
     "We can confirm that in each fold, only two of the three classes are present\n",
@@ -246,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b18c8448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,11 +273,12 @@
     "results = cross_validate(model, data, target, cv=cv)\n",
     "test_score = results[\"test_score\"]\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score.mean():.3f} \u00b1 {test_score.std():.3f}\")"
+    "      f\"{test_score.mean():.3f} ± {test_score.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "45faea6a",
    "metadata": {},
    "source": [
     "We get results that are closer to what we would expect with an accuracy above\n",
@@ -270,6 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a5358814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e64396f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26938bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +338,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86a9b7d6",
    "metadata": {},
    "source": [
     "We see that neither the training and testing sets have the same class\n",
@@ -329,6 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8ba0e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,18 +366,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69b132d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = cross_validate(model, data, target, cv=cv)\n",
     "test_score = results[\"test_score\"]\n",
     "print(f\"The average accuracy is \"\n",
-    "      f\"{test_score.mean():.3f} \u00b1 {test_score.std():.3f}\")"
+    "      f\"{test_score.mean():.3f} ± {test_score.std():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6041288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2efd926f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "94416d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,6 +426,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ac5e7515",
    "metadata": {},
    "source": [
     "In this case, we observe that the class counts are very close both in the\n",
@@ -412,8 +443,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
